:arrow_down: refactor: downgraded for use in jdk-13 and below