@@ -17,37 +17,25 @@ public class PostfixEvaluator {
     /* A helper method that performs operations based on given arguments */
     public static int calculate(int operand1, char operator, int operand2) {
 
-        return switch (operator) {                                  // (!) Preview Feature for JDK-13 and below, use
-                                                                    // --enable-preview --release 13 flags to run
-            case '^' -> (int) Math.pow(operand1, operand2);
-            case '*' -> operand1 * operand2;
-            case '/' -> operand1 / operand2;
-            case '%' -> operand1 % operand2;
-            case '+' -> operand1 + operand2;
-            case '-' -> operand1 - operand2;
-            default -> throw new IllegalArgumentException("Argument must be a valid operator!");
+        /* If the above code doesn't work, comment it out and uncomment the code below */
+        switch (operator) {
 
-        };
+            case '^':
+                return (int) Math.pow(operand1, operand2);
+            case '*':
+                return operand1 * operand2;
+            case '/':
+                return operand1 / operand2;
+            case '%':
+                return operand1 % operand2;
+            case '+':
+                return operand1 + operand2;
+            case '-':
+                return operand1 - operand2;
+            default:
+                throw new IllegalArgumentException("Argument must be a valid operator!");
 
-//        /* If the above code doesn't work, comment it out and uncomment the code below */
-//        switch (operator) {
-//
-//            case '^':
-//                return (int) Math.pow(operand1, operand2);
-//            case '*':
-//                return operand1 * operand2;
-//            case '/':
-//                return operand1 / operand2;
-//            case '%':
-//                return operand1 % operand2;
-//            case '+':
-//                return operand1 + operand2;
-//            case '-':
-//                return operand1 - operand2;
-//            default:
-//                throw new IllegalArgumentException("Argument must be a valid operator!");
-//
-//        }
+        }
 
     }
 
@@ -67,27 +55,20 @@ public class PostfixEvaluator {
     /* A helper method that checks if the provided character was one of the valid operators */
     public static boolean isOperator(char c) {
 
-        return switch (c) {                                         // (!) Preview Feature for JDK-13 and below, use
-                                                                    // --enable-preview --release 13 flags to run
-            case '^', '*', '/', '%', '+', '-' -> true;
-            default -> false;
+        /* If the above code doesn't work, comment it out and uncomment the code below */
+        switch (c) {
 
-        };
+            case '^':
+            case '*':
+            case '/':
+            case '%':
+            case '+':
+            case '-':
+                return true;
+            default:
+                return false;
 
-//        /* If the above code doesn't work, comment it out and uncomment the code below */
-//        switch (c) {
-//
-//            case '^':
-//            case '*':
-//            case '/':
-//            case '%':
-//            case '+':
-//            case '-':
-//                return true;
-//            default:
-//                return false;
-//
-//        }
+        }
 
     }
 
